--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "nextjs-facebook-sdk",
+  "author": { "name": "Daniel Melo", "email": "cmdaniel@gmail.com"},
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
